# mds-project

./: .gitignore  README.md  script.py
.github/workflows/: rust-tests.yml
UML/: uml.txt
db/: SqlScript.txt  db_mds_backup
docs/: uml.txt
iot-security-backend/: Cargo.toml
iot-security-backend/src/: auth.rs  main.rs  middleware.rs  models.rs
web-interface/iot-ui/: index.html  package-lock.json  package.json  tailwind.config.js
web-interface/iot-ui/src/: App.jsx  index.css  nav.jsx
web-interface/iot-ui/src/api/: client.ts
web-interface/iot-ui/src/pages/: Dashboard.jsx  Device.jsx  Login.jsx  Register.jsx
