[package]
name = "iot-security-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-web-lab = "0.19"
actix-cors = "0.7.0"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
jsonwebtoken = "8.0"
bcrypt = "0.15"
aws-config = "0.55"
aws-sdk-iot = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
actix-service = "2"
futures-util = "0.3"
rumqttc = "0.22"
tokio = { version = "1", features = ["full"] }
ring = "0.17.12"